src/components/Nav.module.scss
.container {
  z-index: 999;
  height: 60px;
  position: relative;
  display: flex;
  justify-content: flex-end;
  background-color: #403d39;
  .item {
    transition: background-color 0.3s;
    margin: {
      left: 10px;
      right: 10px;
    }
    font-weight: 700;
    width: 130px;
    height: 60px;
    text-align: center;
    line-height: 60px;
    &:hover:not(.logo) {
      background-color: rgb(73, 73, 73);
    }

    &.logo {
      flex-grow: 1;
      text-align: left;
      font-size: 25px;
      margin: {
        left: 20px;
      }
      .logo__place {
      }
      .logo__review {
        color: #eb5e28;
      }
    }
  }
}

